@@ -1,2 +1,2 @@
 #
-__version__ = '2.3.1.dev1'
+__version__ = '2.3.1.dev2'
